prevent tags from wrapping

--- a/src/app/style.css
+++ b/src/app/style.css
@@ -2,16 +2,16 @@
 
   Main plugin style. When inserted by the Chrome
   plugin we insert this plugin into all iframes on
-  the page. 
+  the page.
 
 */
 
-.tagit-top-wrapper, 
-.tagit-top-wrapper > body, 
+.tagit-top-wrapper,
+.tagit-top-wrapper > body,
 .tagit-top-wrapper > body > iframe {
   height: 100%;
   margin: 0;
-}  
+}
 
 html.tagit-top-wrapper {
   overflow: hidden;
@@ -26,6 +26,7 @@ html.tagit-top-wrapper {
 }
 
 .tagit-tag {
-  background-color: #EDDE45;
+  background-color: #edde45;
   padding: 3px;
+  white-space: nowrap;
 }
